# amia

./: README.md
TP/: AMIA_2025_TP1-TEICH-fixed.ipynb  AMIA_2025_TP1-TEICH.ipynb  AMIA_2025_TP1.ipynb  pyproject.toml
autoevaluaciones/: aev2.py  aev3.py  aev4.py  aev5.py  main.py  pyproject.toml
